--- a/cloudflare-templates/500.html
+++ b/cloudflare-templates/500.html
@@ -13,7 +13,8 @@
          src="https://github.com/ZaufanaTrzeciaStrona/Branding/blob/majster/assets/no-bg/z3s-variant-b.png?raw=true">
 </div>
 <div class="error-box">
-    Wystąpił błąd serwera 5XX
+    Wystąpił błąd serwera 5XX.<br></br>Sprawdź <a href="https://status.zaufanatrzeciastrona.pl">stronę statusu</a> - być
+    może to przerwa techniczna.
 </div>
 <div class="error-box">
     ::CLOUDFLARE_ERROR_500S_BOX::
