feat: more scenarios, revamped old ones

--- a/cloudflare-templates/country.html
+++ b/cloudflare-templates/country.html
@@ -5,18 +5,19 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Zablokowana Trzecia Strona</title>
     <link href="./style.css" rel="stylesheet">
+    <link href="./favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
 <div class="message">
     <img alt="Logo witryny Zaufana Trzecia Strona"
          class="logo"
-         src="https://github.com/ZaufanaTrzeciaStrona/Branding/blob/majster/assets/no-bg/z3s-variant-b.png?raw=true">
+         src="./logo.png">
 </div>
 <div class="error-box">
     You have been blocked from this website.
 </div>
 <div class="error-box">
-    ::GEO::
+    IP: ::CLIENT_IP:: | Ray ID: ::RAY_ID:: | Country: ::GEO::
 </div>
 </body>
 </html>
